fix alignment

--- a/src/front/src/components/Solution.css
+++ b/src/front/src/components/Solution.css
@@ -1,13 +1,20 @@
 .solution {
-  width: 300px;
   height: 80px;
   background: rgb(252, 221, 221);
   border: 2px solid #b4ebb4;
   display: inline-block;
   border-radius: 20px;
+  block-size: fit-content;
+  padding: 20px;
 }
+
+.solution h3 {
+  margin-bottom: 10px;
+}
+
 .solutionText {
   font: bold;
   font-size: medium;
   color: brown;
+  text-align: left;
 }
